--- a/libretaRepo.ipynb
+++ b/libretaRepo.ipynb
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -976,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -987,7 +987,7 @@
       "Generated nodes: 179\n",
       "Explored nodes: 155\n",
       "Expanded nodes: 154\n",
-      "Execution time: 0:00:00.001147\n",
+      "Execution time: 0:00:00.001028\n",
       "Solution length: 12\n",
       "Solution cost: 0:01:33.224760\n",
       "Solution: [772970924 → 2822641953, 3.43992, 2822641953 → 11787944276, 2.03400, 11787944276 → 672069214, 0.98112, 672069214 → 435465423, 10.09716, 435465423 → 1837752577, 16.21152, 1837752577 → 1255528464, 15.47148, 1255528464 → 672689819, 6.72156, 672689819 → 1255528484, 12.24504, 1255528484 → 672687840, 1.31016, 672687840 → 1529570530, 2.85588, 1529570530 → 1307889214, 9.81108, 1307889214 → 1837752453, 12.04584]\n",
@@ -996,17 +996,17 @@
       "Generated nodes: 1591\n",
       "Explored nodes: 1558\n",
       "Expanded nodes: 1557\n",
-      "Execution time: 0:00:00.002955\n",
+      "Execution time: 0:00:00.002995\n",
       "Solution length: 66\n",
       "Solution cost: 0:08:09.119400\n",
       "Solution: [772970924 → 2822641953, 3.43992, 2822641953 → 11787944276, 2.03400, 11787944276 → 1529477757, 10.32312, 1529477757 → 1529477781, 7.82976, 1529477781 → 1534218793, 10.67964, 1534218793 → 1534218779, 6.63132, 1534218779 → 435465423, 7.77168, 435465423 → 1837752577, 16.21152, 1837752577 → 1255528464, 15.47148, 1255528464 → 1255528489, 18.39828, 1255528489 → 1529477782, 10.79544, 1529477782 → 1529477783, 9.10992, 1529477783 → 1255547627, 10.82376, 1255547627 → 1529570537, 10.87440, 1529570537 → 1580940744, 2.03568, 1580940744 → 1972430537, 9.95532, 1972430537 → 1972430544, 1.90356, 1972430544 → 434369348, 11.93388, 434369348 → 11303171544, 1.58064, 11303171544 → 1529803131, 0.92976, 1529803131 → 1529803155, 2.37984, 1529803155 → 1836701449, 16.60164, 1836701449 → 1838958617, 10.41408, 1838958617 → 1838958632, 10.25712, 1838958632 → 1838958612, 8.50200, 1838958612 → 1838958629, 8.45820, 1838958629 → 1994436318, 8.45652, 1994436318 → 569203716, 17.10828, 569203716 → 1542527083, 8.10588, 1542527083 → 1845484952, 10.16532, 1845484952 → 1846799917, 3.34908, 1846799917 → 1846799860, 3.29628, 1846799860 → 569283039, 9.48780, 569283039 → 569269854, 0.90396, 569269854 → 1846794076, 0.71040, 1846794076 → 1530009759, 23.86080, 1530009759 → 1846799864, 1.63224, 1846799864 → 1846799914, 2.49192, 1846799914 → 1846799897, 0.58212, 1846799897 → 1846799846, 2.22336, 1846799846 → 579337054, 19.19940, 579337054 → 444000984, 2.68728, 444000984 → 5009413166, 5.25264, 5009413166 → 1530009783, 6.91920, 1530009783 → 1635414168, 5.63040, 1635414168 → 338700479, 6.01404, 338700479 → 1635414150, 2.24640, 1635414150 → 1529803128, 1.78752, 1529803128 → 335902337, 1.78452, 335902337 → 1526053382, 5.12280, 1526053382 → 1836701463, 4.05780, 1836701463 → 497073943, 7.46580, 497073943 → 335902340, 1.28220, 335902340 → 1836701467, 4.35816, 1836701467 → 1307889216, 11.13240, 1307889216 → 1529478076, 13.60716, 1529478076 → 1618101330, 1.43388, 1618101330 → 1628459242, 8.63880, 1628459242 → 1529477859, 4.09260, 1529477859 → 1529477861, 3.87984, 1529477861 → 1529478001, 10.58964, 1529478001 → 1618101327, 3.98460, 1618101327 → 1307889215, 4.12164, 1307889215 → 1836701507, 11.63064, 1836701507 → 1628459238, 12.32712, 1628459238 → 1837752453, 12.15300]\n",
       "\n",
       "Testing A* Search:\n",
-      "<function a_star_search at 0x0000021C1B92C540>\n",
+      "<function a_star_search at 0x0000015B48E9EE80>\n",
       "Generated nodes: 106\n",
       "Explored nodes: 81\n",
       "Expanded nodes: 80\n",
-      "Execution time: 0:00:00.009768\n",
+      "Execution time: 0:00:00.008803\n",
       "Solution length: 12\n",
       "Solution cost: 0:01:22.085280\n",
       "Solution: [772970924 → 2822641953, 3.43992, 2822641953 → 11787944276, 2.03400, 11787944276 → 672069214, 0.98112, 672069214 → 435465423, 10.09716, 435465423 → 1837752577, 16.21152, 1837752577 → 1255528464, 15.47148, 1255528464 → 672689819, 6.72156, 672689819 → 1529570474, 1.07760, 1529570474 → 1529570534, 3.61212, 1529570534 → 1529477879, 5.15976, 1529477879 → 1307889214, 5.23320, 1307889214 → 1837752453, 12.04584]\n",
@@ -1015,7 +1015,7 @@
       "Generated nodes: 28\n",
       "Explored nodes: 16\n",
       "Expanded nodes: 15\n",
-      "Execution time: 0:00:00.002377\n",
+      "Execution time: 0:00:00.002070\n",
       "Solution length: 15\n",
       "Solution cost: 0:02:05.382000\n",
       "Solution: [772970924 → 2822641953, 3.43992, 2822641953 → 11787944276, 2.03400, 11787944276 → 1529477757, 10.32312, 1529477757 → 1529477781, 7.82976, 1529477781 → 1534218793, 10.67964, 1534218793 → 1534218779, 6.63132, 1534218779 → 435465423, 7.77168, 435465423 → 1837752577, 16.21152, 1837752577 → 1255528464, 15.47148, 1255528464 → 672689819, 6.72156, 672689819 → 1255528484, 12.24504, 1255528484 → 672687840, 1.31016, 672687840 → 1529570530, 2.85588, 1529570530 → 1307889214, 9.81108, 1307889214 → 1837752453, 12.04584]\n"
